--- a/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
+++ b/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
@@ -121,6 +121,12 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Xam.Plugin.SimpleColorPicker.csproj">
+      <Project>{1f5c8acc-b40f-48ae-81f5-3e455399c892}</Project>
+      <Name>Xam.Plugin.SimpleColorPicker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\ColorPicker.Sample\ColorPicker.Sample.projitems" Label="Shared" />
 </Project>
