--- a/samples/ColorPicker.Sample.UWP/ColorPicker.Sample.UWP.csproj
+++ b/samples/ColorPicker.Sample.UWP/ColorPicker.Sample.UWP.csproj
@@ -148,8 +148,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.7" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Xam.Plugin.SimpleColorPicker.csproj">
