--- a/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
+++ b/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
@@ -119,7 +119,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Xam.Plugin.SimpleColorPicker.csproj">
