--- a/src/Xam.Plugin.SimpleColorPicker.csproj
+++ b/src/Xam.Plugin.SimpleColorPicker.csproj
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel" Version="4.3.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
   </ItemGroup>
 
   <ItemGroup>
