--- a/src/ColorPicker.csproj
+++ b/src/ColorPicker.csproj
@@ -1,21 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Amporis.Xamarin.Forms.ColorPicker</AssemblyName>
     <RootNamespace>Amporis.Xamarin.Forms.ColorPicker</RootNamespace>
     <Description>Color picker for Xamarin.Forms. It can be used as a large color mixer control (ColorPickerMixer) or as a dialog for select a color (ColorPickerDialog) or as an entry editor (ColorPickerEntry) of hexadecimal value with preview of a color and option of launch a dialog with color mixer.</Description>
     <Authors>Petr Vobornik</Authors>
     <Company>Amporis, s.r.o.</Company>
     <Product>ColorPicker</Product>
-    <Copyright>Copyright 2018 Amporis, s.r.o.</Copyright>
+    <Copyright>Copyright 2018-2019 Amporis, s.r.o.</Copyright>
     <PackageTags>Xamarin Forms Color Picker ColorPicker</PackageTags>
-    <AssemblyVersion>1.0.21.0</AssemblyVersion>
-    <FileVersion>1.0.21.0</FileVersion>
+    <AssemblyVersion>1.0.22.0</AssemblyVersion>
+    <FileVersion>1.0.22.0</FileVersion>
     <PackageProjectUrl>https://github.com/PetrVobornik/ColorPicker</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/PetrVobornik/ColorPicker/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl></RepositoryUrl>
-    <Version>1.0.21</Version>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/PetrVobornik/ColorPicker</RepositoryUrl>
+    <Version>1.0.22</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIconUrl>https://raw.githubusercontent.com/PetrVobornik/ColorPicker/master/images/colorpicker-icon.png?raw=true</PackageIconUrl>
+    <PackageReleaseNotes>.NET Standard updates</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,11 +34,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ColorPickerEntry.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="ColorPickerMixer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 
 </Project>
