--- a/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
+++ b/samples/ColorPicker.Sample.iOS/ColorPicker.Sample.iOS.csproj
@@ -121,6 +121,12 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ColorPicker.csproj">
+      <Project>{a0b72722-3b20-4970-bfe6-0e8b02df0df7}</Project>
+      <Name>ColorPicker</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\ColorPicker.Sample\ColorPicker.Sample.projitems" Label="Shared" />
 </Project>
